--- a/charts/gitlab-ce/16.7.0/Chart.yaml
+++ b/charts/gitlab-ce/16.7.0/Chart.yaml
@@ -1,6 +1,6 @@
 kubeVersion: ">=1.24.0-0"
 apiVersion: v2
-name: docker
+name: gitlab-ce
 version: 16.7.0
 appVersion: 24.0.7
 description: Dedicated App for using Docker-in-Docker
